Outros/paulao2/src/Compilador/FastParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 ../Compilador/Fast.g 2010-07-09 14:21:03

package Compilador;
import Compilador.Semanticator;
import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class FastParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "COMMA", "SEMI", "DOT", "PLUS", "MINUS", "STAR", "SLASH", "POWER", "LESS", "GREATER", "ASSIGN", "PERCENT", "LCURLY", "RCURLY", "EQUAL", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", "AND", "OR", "NOT", "FALSE", "TRUE", "TO", "FOR", "REPEAT", "WHILE", "IF", "ELSE", "ELSEIF", "UNTIL", "DO", "WITH", "IN", "END", "RETURN", "CHEST", "THEN", "T_INT", "T_REAL", "T_STRING", "T_CHAIN", "T_VOID", "T_BOOL", "PRINT", "NAME", "INT", "FLOAT", "NORMALSTRING", "LETTER", "DIGIT", "EscapeSequence", "WS", "COMMENT", "LINE_COMMENT", "LETTERL", "LETTERU"
    };
    public static final int STAR=14;
    public static final int LBRACK=6;
    public static final int WHILE=35;
    public static final int LETTER=58;
    public static final int T_STRING=49;
    public static final int T_BOOL=52;
    public static final int GREATEREQUAL=26;
    public static final int FOR=33;
    public static final int DO=40;
    public static final int FLOAT=56;
    public static final int NOT=29;
    public static final int AND=27;
    public static final int EOF=-1;
    public static final int T_VOID=51;
    public static final int T_REAL=48;
    public static final int LPAREN=4;
    public static final int IF=36;
    public static final int NOTEQUAL=24;
    public static final int RPAREN=5;
    public static final int NAME=54;
    public static final int GREATER=18;
    public static final int SLASH=15;
    public static final int THEN=46;
    public static final int IN=42;
    public static final int COMMA=9;
    public static final int T_INT=47;
    public static final int EQUAL=23;
    public static final int RETURN=44;
    public static final int LESS=17;
    public static final int PLUS=12;
    public static final int DIGIT=59;
    public static final int COMMENT=62;
    public static final int DOT=11;
    public static final int WITH=41;
    public static final int RBRACK=7;
    public static final int PERCENT=20;
    public static final int LINE_COMMENT=63;
    public static final int TO=32;
    public static final int ELSE=37;
    public static final int POWER=16;
    public static final int LCURLY=21;
    public static final int INT=55;
    public static final int LETTERU=65;
    public static final int MINUS=13;
    public static final int CHEST=45;
    public static final int SEMI=10;
    public static final int TRUE=31;
    public static final int PRINT=53;
    public static final int LETTERL=64;
    public static final int ELSEIF=38;
    public static final int COLON=8;
    public static final int NORMALSTRING=57;
    public static final int WS=61;
    public static final int T_CHAIN=50;
    public static final int UNTIL=39;
    public static final int RCURLY=22;
    public static final int OR=28;
    public static final int ASSIGN=19;
    public static final int REPEAT=34;
    public static final int END=43;
    public static final int FALSE=30;
    public static final int LESSEQUAL=25;
    public static final int EscapeSequence=60;

    // delegates
    // delegators


        public FastParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FastParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return FastParser.tokenNames; }
    public String getGrammarFileName() { return "../Compilador/Fast.g"; }


    Semanticator s = new Semanticator(this);
    CodeGenerator g = new CodeGenerator(s);



    // $ANTLR start "fast"
    // ../Compilador/Fast.g:102:1: fast : ( ( vardecl SEMI )* ( stat ) )+ ;
    public final void fast() throws RecognitionException {
        try {
            // ../Compilador/Fast.g:103:2: ( ( ( vardecl SEMI )* ( stat ) )+ )
            // ../Compilador/Fast.g:103:4: ( ( vardecl SEMI )* ( stat ) )+
            {
            // ../Compilador/Fast.g:103:4: ( ( vardecl SEMI )* ( stat ) )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==CHEST||(LA2_0>=T_INT && LA2_0<=NAME)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // ../Compilador/Fast.g:103:5: ( vardecl SEMI )* ( stat )
            	    {
            	    // ../Compilador/Fast.g:103:5: ( vardecl SEMI )*
            	    loop1:
            	    do {
            	        int alt1=2;
            	        alt1 = dfa1.predict(input);
            	        switch (alt1) {
            	    	case 1 :
            	    	    // ../Compilador/Fast.g:103:6: vardecl SEMI
            	    	    {
            	    	    pushFollow(FOLLOW_vardecl_in_fast691);
            	    	    vardecl();

            	    	    state._fsp--;

            	    	    match(input,SEMI,FOLLOW_SEMI_in_fast693); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop1;
            	        }
            	    } while (true);

            	    // ../Compilador/Fast.g:103:20: ( stat )
            	    // ../Compilador/Fast.g:103:21: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_fast697);
            	    stat();

            	    state._fsp--;


            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "fast"


    // $ANTLR start "stat"
    // ../Compilador/Fast.g:106:1: stat : ( def_func | def_chest | funccall SEMI | def_print SEMI );
    public final void stat() throws RecognitionException {
        try {
            // ../Compilador/Fast.g:107:2: ( def_func | def_chest | funccall SEMI | def_print SEMI )
            int alt3=4;
            switch ( input.LA(1) ) {
            case T_INT:
            case T_REAL:
            case T_STRING:
            case T_CHAIN:
            case T_VOID:
            case T_BOOL:
                {
                alt3=1;
                }
                break;
            case CHEST:
                {
                alt3=2;
                }
                break;
            case NAME:
                {
                alt3=3;
                }
                break;
            case PRINT:
                {
                alt3=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // ../Compilador/Fast.g:107:4: def_func
                    {
                    pushFollow(FOLLOW_def_func_in_stat712);
                    def_func();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // ../Compilador/Fast.g:108:4: def_chest
                    {
                    pushFollow(FOLLOW_def_chest_in_stat720);
                    def_chest();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // ../Compilador/Fast.g:109:6: funccall SEMI
                    {
                    pushFollow(FOLLOW_funccall_in_stat727);
                    funccall();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_stat729); 

                    }
                    break;
                case 4 :
                    // ../Compilador/Fast.g:110:4: def_print SEMI
                    {
                    pushFollow(FOLLOW_def_print_in_stat734);
                    def_print();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_stat736); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "stat"


    // $ANTLR start "weakstat"
    // ../Compilador/Fast.g:113:1: weakstat returns [ String type ] : ( varatrib SEMI | vardecl SEMI | funccall SEMI | def_if | def_while | t= def_return SEMI | chestaccess SEMI | def_repeat | def_print SEMI );
    public final String weakstat() throws RecognitionException {
        String type = null;

        String t = null;


        try {
            // ../Compilador/Fast.g:114:2: ( varatrib SEMI | vardecl SEMI | funccall SEMI | def_if | def_while | t= def_return SEMI | chestaccess SEMI | def_repeat | def_print SEMI )
            int alt4=9;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // ../Compilador/Fast.g:114:4: varatrib SEMI
                    {
                    pushFollow(FOLLOW_varatrib_in_weakstat751);
                    varatrib();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat753); 

                    }
                    break;
                case 2 :
                    // ../Compilador/Fast.g:115:4: vardecl SEMI
                    {
                    pushFollow(FOLLOW_vardecl_in_weakstat759);
                    vardecl();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat765); 

                    }
                    break;
                case 3 :
                    // ../Compilador/Fast.g:116:4: funccall SEMI
                    {
                    pushFollow(FOLLOW_funccall_in_weakstat771);
                    funccall();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat773); 

                    }
                    break;
                case 4 :
                    // ../Compilador/Fast.g:117:4: def_if
                    {
                    pushFollow(FOLLOW_def_if_in_weakstat779);
                    def_if();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // ../Compilador/Fast.g:118:4: def_while
                    {
                    pushFollow(FOLLOW_def_while_in_weakstat788);
                    def_while();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // ../Compilador/Fast.g:119:4: t= def_return SEMI
                    {
                    pushFollow(FOLLOW_def_return_in_weakstat799);
                    t=def_return();

                    state._fsp--;

                    type =t;
                    match(input,SEMI,FOLLOW_SEMI_in_weakstat803); 

                    }
                    break;
                case 7 :
                    // ../Compilador/Fast.g:120:4: chestaccess SEMI
                    {
                    pushFollow(FOLLOW_chestaccess_in_weakstat809);
                    chestaccess();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat811); 

                    }
                    break;
                case 8 :
                    // ../Compilador/Fast.g:121:4: def_repeat
                    {
                    pushFollow(FOLLOW_def_repeat_in_weakstat820);
                    def_repeat();

                    state._fsp--;


                    }
                    break;
                case 9 :
                    // ../Compilador/Fast.g:122:4: def_print SEMI
                    {
                    pushFollow(FOLLOW_def_print_in_weakstat825);
                    def_print();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat827); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return type;
    }
    // $ANTLR end "weakstat"


    // $ANTLR start "varatrib"
    // ../Compilador/Fast.g:125:1: varatrib : n= NAME ASSIGN le= logic_op_expr ;
    public final void varatrib() throws RecognitionException {
        Token n=null;
        FastParser.logic_op_expr_return le = null;


        try {
            // ../Compilador/Fast.g:126:2: (n= NAME ASSIGN le= logic_op_expr )
            // ../Compilador/Fast.g:126:5: n= NAME ASSIGN le= logic_op_expr
            {
            n=(Token)match(input,NAME,FOLLOW_NAME_in_varatrib842); 
            match(input,ASSIGN,FOLLOW_ASSIGN_in_varatrib844); 
            pushFollow(FOLLOW_logic_op_expr_in_varatrib848);
            le=logic_op_expr();

            state._fsp--;

             s.eval_assign(s.get_type(n.getText()), le.type); g.storeVariable(n.getText(), le.type);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "varatrib"


    // $ANTLR start "vardecl"
    // ../Compilador/Fast.g:129:1: vardecl : t= type v= NAME ( COMMA v= NAME )* ;
    public final void vardecl() throws RecognitionException {
        Token v=null;
        String t = null;


        try {
            // ../Compilador/Fast.g:130:2: (t= type v= NAME ( COMMA v= NAME )* )
            // ../Compilador/Fast.g:130:5: t= type v= NAME ( COMMA v= NAME )*
            {
            pushFollow(FOLLOW_type_in_vardecl865);
            t=type();

            state._fsp--;

            v=(Token)match(input,NAME,FOLLOW_NAME_in_vardecl869); 
             s.add_variable(v.getText(), t); g.addVariable(v.getText(), t); 
            // ../Compilador/Fast.g:131:3: ( COMMA v= NAME )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // ../Compilador/Fast.g:131:4: COMMA v= NAME
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_vardecl878); 
            	    v=(Token)match(input,NAME,FOLLOW_NAME_in_vardecl882); 
            	     s.add_variable(v.getText(), t); g.addVariable(v.getText(), t); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "vardecl"


    // $ANTLR start "funccall"
    // ../Compilador/Fast.g:134:1: funccall returns [ String type ] : n= NAME LPAREN h= arglist RPAREN ;
    public final String funccall() throws RecognitionException {
        String type = null;

        Token n=null;
        HashMap<String,String> h = null;


        try {
            // ../Compilador/Fast.g:135:2: (n= NAME LPAREN h= arglist RPAREN )
            // ../Compilador/Fast.g:135:5: n= NAME LPAREN h= arglist RPAREN
            {
            n=(Token)match(input,NAME,FOLLOW_NAME_in_funccall907); 
            match(input,LPAREN,FOLLOW_LPAREN_in_funccall909); 
            pushFollow(FOLLOW_arglist_in_funccall913);
            h=arglist();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_funccall915); 
             type =s.eval_funccall(n.getText(), h); g.pushFunctionCall(n.getText(), h, type); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return type;
    }
    // $ANTLR end "funccall"


    // $ANTLR start "def_func"
    // ../Compilador/Fast.g:138:1: def_func : t= type n= NAME LPAREN h= typedarglist RPAREN (tw= weakstat )* END ;
    public final void def_func() throws RecognitionException {
        Token n=null;
        String t = null;

        HashMap<String,String> h = null;

        String tw = null;


        try {
            // ../Compilador/Fast.g:139:2: (t= type n= NAME LPAREN h= typedarglist RPAREN (tw= weakstat )* END )
            // ../Compilador/Fast.g:139:5: t= type n= NAME LPAREN h= typedarglist RPAREN (tw= weakstat )* END
            {
            pushFollow(FOLLOW_type_in_def_func933);
            t=type();

            state._fsp--;

            n=(Token)match(input,NAME,FOLLOW_NAME_in_def_func937); 
            match(input,LPAREN,FOLLOW_LPAREN_in_def_func939); 
            pushFollow(FOLLOW_typedarglist_in_def_func943);
            h=typedarglist();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_def_func945); 
            s.open_function_decl(t,h,n.getText()); 
            			 g.pushFunction(n.getText(), h, t);    
            			
            // ../Compilador/Fast.g:142:6: (tw= weakstat )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=REPEAT && LA6_0<=IF)||LA6_0==RETURN||(LA6_0>=T_INT && LA6_0<=NAME)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // ../Compilador/Fast.g:142:7: tw= weakstat
            	    {
            	    pushFollow(FOLLOW_weakstat_in_def_func956);
            	    tw=weakstat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            s.close_function_decl(tw);
            			 g.pushEnd(t);
            			
            match(input,END,FOLLOW_END_in_def_func965); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_func"


    // $ANTLR start "def_if"
    // ../Compilador/Fast.g:148:1: def_if : IF e= logic_op_expr THEN ( weakstat )* ( END | ( ELSE ( weakstat )* END ) ) ;
    public final void def_if() throws RecognitionException {
        FastParser.logic_op_expr_return e = null;


        try {
            // ../Compilador/Fast.g:149:2: ( IF e= logic_op_expr THEN ( weakstat )* ( END | ( ELSE ( weakstat )* END ) ) )
            // ../Compilador/Fast.g:149:5: IF e= logic_op_expr THEN ( weakstat )* ( END | ( ELSE ( weakstat )* END ) )
            {
            match(input,IF,FOLLOW_IF_in_def_if978); 
            pushFollow(FOLLOW_logic_op_expr_in_def_if982);
            e=logic_op_expr();

            state._fsp--;

             g.pushIf(e.type, e.opr, "Else");
            match(input,THEN,FOLLOW_THEN_in_def_if986); 
            // ../Compilador/Fast.g:150:3: ( weakstat )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=REPEAT && LA7_0<=IF)||LA7_0==RETURN||(LA7_0>=T_INT && LA7_0<=NAME)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // ../Compilador/Fast.g:150:3: weakstat
            	    {
            	    pushFollow(FOLLOW_weakstat_in_def_if991);
            	    weakstat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

             g.pushGotoLabel("Done"+g.popLabel("Done"));
            		  g.pushElseLabel();
            		
            // ../Compilador/Fast.g:154:3: ( END | ( ELSE ( weakstat )* END ) )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==END) ) {
                alt9=1;
            }
            else if ( (LA9_0==ELSE) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // ../Compilador/Fast.g:154:5: END
                    {
                    match(input,END,FOLLOW_END_in_def_if1003); 

                    }
                    break;
                case 2 :
                    // ../Compilador/Fast.g:154:11: ( ELSE ( weakstat )* END )
                    {
                    // ../Compilador/Fast.g:154:11: ( ELSE ( weakstat )* END )
                    // ../Compilador/Fast.g:154:13: ELSE ( weakstat )* END
                    {
                    match(input,ELSE,FOLLOW_ELSE_in_def_if1009); 
                    // ../Compilador/Fast.g:154:18: ( weakstat )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( ((LA8_0>=REPEAT && LA8_0<=IF)||LA8_0==RETURN||(LA8_0>=T_INT && LA8_0<=NAME)) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
                    	    // ../Compilador/Fast.g:154:18: weakstat
                    	    {
                    	    pushFollow(FOLLOW_weakstat_in_def_if1011);
                    	    weakstat();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop8;
                        }
                    } while (true);

                    match(input,END,FOLLOW_END_in_def_if1014); 

                    }


                    }
                    break;

            }

             g.pushDoneLabel(); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_if"


    // $ANTLR start "def_repeat"
    // ../Compilador/Fast.g:158:1: def_repeat : REPEAT ( weakstat )* UNTIL LPAREN logic_op_expr RPAREN END ;
    public final void def_repeat() throws RecognitionException {
        try {
            // ../Compilador/Fast.g:159:2: ( REPEAT ( weakstat )* UNTIL LPAREN logic_op_expr RPAREN END )
            // ../Compilador/Fast.g:159:5: REPEAT ( weakstat )* UNTIL LPAREN logic_op_expr RPAREN END
            {
            match(input,REPEAT,FOLLOW_REPEAT_in_def_repeat1036); 
            // ../Compilador/Fast.g:159:12: ( weakstat )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0>=REPEAT && LA10_0<=IF)||LA10_0==RETURN||(LA10_0>=T_INT && LA10_0<=NAME)) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // ../Compilador/Fast.g:159:12: weakstat
            	    {
            	    pushFollow(FOLLOW_weakstat_in_def_repeat1038);
            	    weakstat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

            match(input,UNTIL,FOLLOW_UNTIL_in_def_repeat1041); 
            match(input,LPAREN,FOLLOW_LPAREN_in_def_repeat1043); 
            pushFollow(FOLLOW_logic_op_expr_in_def_repeat1045);
            logic_op_expr();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_def_repeat1047); 
            match(input,END,FOLLOW_END_in_def_repeat1049); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_repeat"


    // $ANTLR start "def_chest"
    // ../Compilador/Fast.g:162:1: def_chest : CHEST NAME COLON ( vardecl SEMI | funccall SEMI )* END ;
    public final void def_chest() throws RecognitionException {
        try {
            // ../Compilador/Fast.g:163:2: ( CHEST NAME COLON ( vardecl SEMI | funccall SEMI )* END )
            // ../Compilador/Fast.g:163:4: CHEST NAME COLON ( vardecl SEMI | funccall SEMI )* END
            {
            match(input,CHEST,FOLLOW_CHEST_in_def_chest1061); 
            match(input,NAME,FOLLOW_NAME_in_def_chest1063); 
            match(input,COLON,FOLLOW_COLON_in_def_chest1065); 
            // ../Compilador/Fast.g:163:21: ( vardecl SEMI | funccall SEMI )*
            loop11:
            do {
                int alt11=3;
                int LA11_0 = input.LA(1);

                if ( ((LA11_0>=T_INT && LA11_0<=T_BOOL)) ) {
                    alt11=1;
                }
                else if ( (LA11_0==NAME) ) {
                    alt11=2;
                }


                switch (alt11) {
            	case 1 :
            	    // ../Compilador/Fast.g:163:23: vardecl SEMI
            	    {
            	    pushFollow(FOLLOW_vardecl_in_def_chest1069);
            	    vardecl();

            	    state._fsp--;

            	    match(input,SEMI,FOLLOW_SEMI_in_def_chest1071); 

            	    }
            	    break;
            	case 2 :
            	    // ../Compilador/Fast.g:163:38: funccall SEMI
            	    {
            	    pushFollow(FOLLOW_funccall_in_def_chest1075);
            	    funccall();

            	    state._fsp--;

            	    match(input,SEMI,FOLLOW_SEMI_in_def_chest1077); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            match(input,END,FOLLOW_END_in_def_chest1082); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_chest"


    // $ANTLR start "def_while"
    // ../Compilador/Fast.g:166:1: def_while : WHILE LPAREN le= logic_op_expr RPAREN ( weakstat )* END ;
    public final void def_while() throws RecognitionException {
        FastParser.logic_op_expr_return le = null;

